some code style change

--- a/src/experimental/SConscript
+++ b/src/experimental/SConscript
@@ -10,4 +10,4 @@ experimental_env.Append(LIBS=[
 ])
 
 experimental_env.Program('boost_function_test.cc')
-experimental_env.Program('boost_asio_test.cc')
+#experimental_env.Program('boost_asio_test.cc')
