--- a/src/experimental/SConscript
+++ b/src/experimental/SConscript
@@ -10,6 +10,6 @@ experimental_env.Append(LIBS=[
 	'boost_thread'
 ])
 
-#experimental_env.Program('boost_function_test.cc')
 experimental_env.Program('chat/chat_message.cc')
 experimental_env.Program('chat/chat_server.cc')
+experimental_env.Program('chat/posix_chat_client.cc')
