增加epoller类文件，并编写了相应的SConscript文件

--- a/src/thread/SConscript
+++ b/src/thread/SConscript
@@ -3,11 +3,15 @@ Import('env')
 thread_env = env.Clone()
 
 thread_env.Append(LIBS=[
-	'boost_thread',
+	'boost_thread'
 ])
 
-thread_env.Program('thread_pool_test', 
-[
-	'thread_pool_test.cc',
+thread_src = [
 	'thread_pool.cc',
-])
+]
+
+thread_lib = thread_env.StaticLibrary('thread', thread_src)
+
+thread_env.Append(LIBS=thread_lib)
+
+thread_env.Program('thread_pool_test.cc')
