--- a/src/net/SConscript
+++ b/src/net/SConscript
@@ -3,11 +3,13 @@ Import('env')
 net_env = env.Clone()
 
 net_src = [
-	'epoller.cc'
+	'asyn_server.cc',
+	'connection.cc',
 ]
 
 net_lib = net_env.StaticLibrary('net', net_src)
 
 net_env.Append(LIBS=net_lib)
 
-net_env.Program('epoller_test.cc')
+net_env.Program('asyn_server_test.cc')
+net_env.Program('connection_test.cc')
