还没想好怎么将asyn_server与connection完全分离

--- a/src/net/SConscript
+++ b/src/net/SConscript
@@ -11,5 +11,5 @@ net_lib = net_env.StaticLibrary('net', net_src)
 
 net_env.Append(LIBS=net_lib)
 
-net_env.Program('asyn_server_test.cc')
+#net_env.Program('asyn_server_test.cc')
 net_env.Program('connection_test.cc')
