--- a/src/thread/SConscript
+++ b/src/thread/SConscript
@@ -14,4 +14,4 @@ thread_lib = thread_env.StaticLibrary('thread', thread_src)
 
 thread_env.Append(LIBS=thread_lib)
 
-thread_env.Program('thread_pool_test.cc')
+thread_env.Test('thread_pool_test', 'thread_pool_test.cc')
