--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,7 @@ project(Cpp)
 cmake_minimum_required(VERSION 2.6)
 
 include_directories(Src)
+include_directories(ThirdParty)
 
 add_subdirectory(Src)
+add_subdirectory(ThirdParty)
