--- a/Src/Python/CMakeLists.txt
+++ b/Src/Python/CMakeLists.txt
@@ -3,8 +3,9 @@ add_executable(PythonInitTest PythonInitTest.cc)
 include_directories(/usr/include/python2.5)
 
 target_link_libraries(PythonInitTest
-    gtest
-    glog
     boost_python
     python2.5
+    glog
+    gtest
+    gmock
 )
