--- a/Src/Thread/CMakeLists.txt
+++ b/Src/Thread/CMakeLists.txt
@@ -6,7 +6,8 @@ add_executable(ThreadPoolTest ThreadPoolTest.cc)
 
 target_link_libraries(ThreadPoolTest
     Thread
-    gtest
-    glog
     boost_thread
+    glog
+    gtest
+    gmock
 )
