--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,10 @@ project(Cpp)
 
 cmake_minimum_required(VERSION 2.6)
 
-include_directories(Src)
+enable_testing()
+
+include_directories(Egametang)
 include_directories(ThirdParty)
 
-add_subdirectory(Src)
+add_subdirectory(Egametang)
 add_subdirectory(ThirdParty)
