ThirdPart gtest gmock放到Src目录

--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -1,2 +1,11 @@
+project(Cpp)
+cmake_minimum_required(VERSION 2.6)
+
+enable_testing()
+
+include_directories(.)
+include_directories(ThirdParty)
+
 add_subdirectory(Python)
 add_subdirectory(Thread)
+add_subdirectory(ThirdParty)
