--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -3,9 +3,8 @@ cmake_minimum_required(VERSION 2.6)
 
 enable_testing()
 
-include_directories(.)
+include_directories(Egametang)
 include_directories(ThirdParty)
 
-add_subdirectory(Python)
-add_subdirectory(Thread)
+add_subdirectory(Egametang)
 add_subdirectory(ThirdParty)
