--- a/Src/Egametang/Python/CMakeLists.txt
+++ b/Src/Egametang/Python/CMakeLists.txt
@@ -2,9 +2,9 @@ set(PythonSrc
 	PythonInit.cc 
 	PythonEntry.cc
 )
-add_library(Python ${PythonSrc})
+add_library(PythonEntry ${PythonSrc})
 
-include_directories(/usr/include/python2.6)
+include_directories(/usr/include/python2.5)
 
 add_executable(PythonInitTest PythonInitTest.cc)
 add_executable(PythonEntryTest PythonEntryTest.cc)
@@ -16,27 +16,12 @@ set(Excutes
 
 foreach(Excute ${Excutes})
 	target_link_libraries(${Excute}
+		PythonEntry
 		boost_python
-		python2.6
+		python2.5
 		glog
 		gtest
 		gmock
 	)
 	add_test(${Excute} ${Excute})
 endforeach()
-
-#target_link_libraries(PythonInitTest
-#	boost_python
-#	python2.6
-#	glog
-#	gtest
-#	gmock
-#)
-#
-#target_link_libraries(PythonEntryTest
-#	boost_python
-#	python2.6
-#	glog
-#	gtest
-#	gmock
-#)
