--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -6,5 +6,7 @@ enable_testing()
 include_directories(Egametang)
 include_directories(ThirdParty)
 
+link_directories(/usr/local/lib)
+
 add_subdirectory(Egametang)
 add_subdirectory(ThirdParty)
