--- a/Src/Egametang/Rpc/CMakeLists.txt
+++ b/Src/Egametang/Rpc/CMakeLists.txt
@@ -1,5 +1,8 @@
+protobuf_generate_cpp(proto_srcs proto_hdrs RpcProtobufData.proto)
+
 set(RpcSrc 
 	RPCCommunicator.cc
+	${proto_srcs}
 	)
 
 add_library(Rpc ${RpcSrc})
@@ -14,13 +17,13 @@ foreach(Excute ${Excutes})
 	target_link_libraries(${Excute}
 		Rpc
 		Thread
+		${protobuf_library}
 		boost_thread
 		boost_system
-		protobuf
-		glog
-		gflags
-		gtest
-		gmock
+		Glog
+		Gflags
+		Gtest
+		Gmock
 	)
 	add_test(${Excute} ${Excute})
 endforeach()
