--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -20,7 +20,12 @@ LINK_DIRECTORIES(${PROTOBUF_LIBRARIES})
 
 FIND_PACKAGE(PythonLibs REQUIRED)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
-LINK_DIRECTORIES(${PYTHON_LIBRARIES})
+
+FIND_PACKAGE(Boost REQUIRED python thread system)
+SET(Boost_USE_STATIC_LIBS    ON)
+SET(Boost_USE_MULTITHREADED  ON)
+SET(Boost_USE_STATIC_RUNTIME OFF)
+INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
 
 ADD_SUBDIRECTORY(Egametang)
 ADD_SUBDIRECTORY(ThirdParty)
