--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -13,6 +13,8 @@ ENDIF()
 
 INCLUDE_DIRECTORIES(Egametang)
 INCLUDE_DIRECTORIES(ThirdParty)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Egametang)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/ThirdParty)
 
 FIND_PACKAGE(Protobuf REQUIRED)
 INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
@@ -29,5 +31,3 @@ INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
 
 ADD_SUBDIRECTORY(Egametang)
 ADD_SUBDIRECTORY(ThirdParty)
-
-
