一些小修改

--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -39,7 +39,7 @@ SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
 INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
 
-set(LinkLibs
+set(ThirdPartyLibs
 	${GLOG_LIBRARY}
 	${GFLAGS_LIBRARY}
 	${GTEST_LIBRARY}
@@ -47,6 +47,6 @@ set(LinkLibs
 	${PROTOBUF_LIBRARY}
 	${Boost_LIBRARIES}
 	${PYTHON_LIBRARY}
-	)
+)
 
 ADD_SUBDIRECTORY(Egametang)
