--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -3,6 +3,8 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
 
+ADD_DEFINITIONS(-DDEBUG)
+
 PROJECT(Cpp)
 
 OPTION(BUILD_TESTS "Decide if the test suite shall be built or not" ON)
