--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
 
-ADD_DEFINITIONS(-DDEBUG)
+ADD_DEFINITIONS(-g)
 
 PROJECT(Cpp)
 
