--- a/Src/CMakeLists.txt
+++ b/Src/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
 
-ADD_DEFINITIONS(-g)
+ADD_DEFINITIONS(-O2)
 
 PROJECT(Cpp)
 
@@ -34,6 +34,8 @@ INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
 FIND_PACKAGE(PythonLibs REQUIRED)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
 
+FIND_PACKAGE(Perftools REQUIRED)
+
 FIND_PACKAGE(Boost REQUIRED python thread system)
 SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
@@ -48,6 +50,7 @@ set(ThirdPartyLibs
 	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
 	${PYTHON_LIBRARIES}
+	${PERFTOOLS_DEBUG_LIBRARIES}
 )
 
 ADD_SUBDIRECTORY(Egametang)
