增加了创建各类节点的工厂

--- a/Src/Game/Event/CMakeLists.txt
+++ b/Src/Game/Event/CMakeLists.txt
@@ -1,32 +1,9 @@
 PROTOBUF_GENERATE_CPP(proto_srcs proto_hdrs 
-	Echo.proto
+	EventConf.proto
 )
 
-SET(RpcSrc 
-	RpcCommunicator.cc
-	RpcController.cc
-	RequestHandler.cc
-	ResponseHandler.cc
-	RpcChannel.cc
-	RpcServer.cc
-	RpcSession.cc
+SET(EventSrc 
 	${proto_srcs}
 )
 
-
-ADD_LIBRARY(Rpc ${RpcSrc})
-
-ADD_EXECUTABLE(RpcCommunicatorTest RpcCommunicatorTest.cc)
-
-SET(Excutes 
-	RpcCommunicatorTest
-)
-
-FOREACH(Excute ${Excutes})
-	TARGET_LINK_LIBRARIES(${Excute}
-		Rpc
-		Thread
-		${ThirdPartyLibs}
-	)
-	ADD_TEST(${Excute} ${Excute})
-ENDFOREACH()
+ADD_LIBRARY(Event ${EventSrc})
