原来的Egametang目录改成Platform目录,Platform目录和Game统一在 Egametang目录之下

--- a/Egametang/CMakeLists.txt
+++ b/Egametang/CMakeLists.txt
@@ -13,8 +13,8 @@ IF(BUILD_TESTS)
 	ENABLE_TESTING()
 ENDIF()
 
-INCLUDE_DIRECTORIES(Egametang)
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Egametang)
+INCLUDE_DIRECTORIES(Platform)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Platform)
 
 FIND_PACKAGE(GFlags REQUIRED)
 INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIR})
@@ -53,5 +53,5 @@ set(ThirdPartyLibs
 	${PERFTOOLS_DEBUG_LIBRARIES}
 )
 
-ADD_SUBDIRECTORY(Egametang)
+ADD_SUBDIRECTORY(Platform)
 ADD_SUBDIRECTORY(Game)
