增加qt库检测

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -3,7 +3,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
 
-ADD_DEFINITIONS(-O2)
+ADD_DEFINITIONS(-g)
 
 PROJECT(Cpp)
 
@@ -29,18 +29,22 @@ FIND_PACKAGE(GMock REQUIRED)
 INCLUDE_DIRECTORIES(${GMOCK_INCLUDE_DIR})
 
 FIND_PACKAGE(Protobuf REQUIRED)
-INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 
 FIND_PACKAGE(PythonLibs REQUIRED)
-INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
+
+FIND_PACKAGE(Qt4 REQUIRED)
+INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
 
 FIND_PACKAGE(Perftools REQUIRED)
+INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIR})
 
 FIND_PACKAGE(Boost REQUIRED python thread system)
 SET(Boost_USE_STATIC_LIBS    ON)
 SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
-INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
 
 set(ThirdPartyLibs
 	${GLOG_LIBRARIES}
@@ -50,6 +54,7 @@ set(ThirdPartyLibs
 	${PROTOBUF_LIBRARIES}
 	${Boost_LIBRARIES}
 	${PYTHON_LIBRARIES}
+	${QT_LIBRARIES}
 	${PERFTOOLS_DEBUG_LIBRARIES}
 )
 
