增加action节点,增加GameEventsTest,test暂未通过

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -15,6 +15,8 @@ ENDIF()
 
 INCLUDE_DIRECTORIES(Platform)
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Platform)
+INCLUDE_DIRECTORIES(Game)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/Game)
 
 FIND_PACKAGE(GFlags REQUIRED)
 INCLUDE_DIRECTORIES(${GFLAGS_INCLUDE_DIR})
