--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -36,8 +36,8 @@ INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 FIND_PACKAGE(PythonLibs REQUIRED)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
 
-FIND_PACKAGE(Qt4 REQUIRED)
-INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
+#FIND_PACKAGE(Qt4 REQUIRED)
+#INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
 
 FIND_PACKAGE(Perftools REQUIRED)
 INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIR})
