去掉AndNode和OrNode,使用行为树实现事件

--- a/Cpp/Game/BehaviorTree/CMakeLists.txt
+++ b/Cpp/Game/BehaviorTree/CMakeLists.txt
@@ -1,33 +1,31 @@
 PROTOBUF_GENERATE_CPP(proto_srcs proto_hdrs
-	EventConf.proto
+	BehaviorTreeConf.proto
 )
 
-SET(EventSrc
-	AndNode.cc
+SET(BehaviorTreeSrc
 	BuffType.cc
 	ChangeHealth.cc
 	CombatContex.cc
-	Event.cc
 	GameEvents.cc
 	NodeFactories.cc
 	NotNode.cc
-	OrNode.cc
 	SelectorNode.cc
 	SequenceNode.cc
+	BehaviorTree.cc
 	${proto_srcs}
 )
 
-ADD_LIBRARY(Event ${EventSrc})
+ADD_LIBRARY(BehaviorTree ${BehaviorTreeSrc})
 
 ADD_EXECUTABLE(GameEventsTest GameEventsTest.cc)
 
-SET(Excutes 
+SET(Excutes
 	GameEventsTest
 )
 
 FOREACH(Excute ${Excutes})
 	TARGET_LINK_LIBRARIES(${Excute}
-		Event
+		BehaviorTree
 		${ThirdPartyLibs}
 	)
 	ADD_TEST(${Excute} ${Excute})
