--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -3,8 +3,6 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
 
-ADD_DEFINITIONS(-g)
-
 PROJECT(Cpp)
 
 OPTION(BUILD_TESTS "Decide if the test suite shall be built or not" ON)
@@ -36,8 +34,8 @@ INCLUDE_DIRECTORIES(${PROTOBUF_INCLUDE_DIR})
 FIND_PACKAGE(PythonLibs REQUIRED)
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIR})
 
-#FIND_PACKAGE(Qt4 REQUIRED)
-#INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
+FIND_PACKAGE(Qt4 REQUIRED)
+INCLUDE_DIRECTORIES(${QT_INCLUDE_DIR})
 
 FIND_PACKAGE(Perftools REQUIRED)
 INCLUDE_DIRECTORIES(${PERFTOOLS_INCLUDE_DIR})
@@ -62,3 +60,4 @@ set(ThirdPartyLibs
 
 ADD_SUBDIRECTORY(Platform)
 ADD_SUBDIRECTORY(Game)
+ADD_SUBDIRECTORY(Editor)
