BehaviorNodeIf改成BehaviorNode,因为它不是纯接口

--- a/CSharp/GameEditor/GameEditor.csproj
+++ b/CSharp/GameEditor/GameEditor.csproj
@@ -63,6 +63,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="BehaviorNode.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
