--- a/CSharp/ViewModel/ViewModel.csproj
+++ b/CSharp/ViewModel/ViewModel.csproj
@@ -41,14 +41,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BehaviorNodeViewModel.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TreeViewItemViewModel.cs" />
+    <Compile Include="BehaviorTreeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Data\Model.csproj">
+    <ProjectReference Include="..\Model\Model.csproj">
       <Project>{3978E513-87FA-44EC-893A-DBD90A5A8808}</Project>
       <Name>Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
