修复在window下编译的一些问题 1. glog库下的ERROR宏与windosw中的冲突 2. 中文注释后引起问题

--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -44,7 +44,7 @@ SET(Boost_USE_MULTITHREADED  ON)
 SET(Boost_USE_STATIC_RUNTIME OFF)
 INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
 
-set(ThirdPartyLibs
+SET(ThirdPartyLibs
 	${GLOG_LIBRARIES}
 	${GFLAGS_LIBRARIES}
 	${GTEST_LIBRARIES}
@@ -56,7 +56,19 @@ set(ThirdPartyLibs
 )
 
 IF(PROFILE)
-    set(ThirdPartyLibs ${ThirdPartyLibs} ${PERFTOOLS_PROFILE_LIBRARIES})
+    SET(ThirdPartyLibs ${ThirdPartyLibs} ${PERFTOOLS_PROFILE_LIBRARIES})
+ENDIF()
+
+MESSAGE(STATUS "${ThirdPartyLibs}")
+
+IF(MSVC)
+	SET(CMAKE_CXX_FLAGS_DEBUG "/MTd")
+	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:libc.lib")
+	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:libcmt.lib")
+	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:msvcrt.lib")
+	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:libcd.lib")
+	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:libcmtd.lib")
+	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -DBOOST_PYTHON_STATIC_LIB )
 ENDIF()
 
 ADD_SUBDIRECTORY(Platform)
