--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -63,11 +63,11 @@ MESSAGE(STATUS "${ThirdPartyLibs}")
 
 IF(MSVC)
 	SET(CMAKE_CXX_FLAGS_DEBUG "/MTd")
-	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:libc.lib")
-	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:libcmt.lib")
-	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:msvcrt.lib")
-	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:libcd.lib")
-	SET(LINK_FLAGS "${LINK_FLAGS} /NODEFAULTLIB:libcmtd.lib")
+	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:libc.lib")
+	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:libcmt.lib")
+	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:msvcrt.lib")
+	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:libcd.lib")
+	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:libcmtd.lib")
 	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -DBOOST_PYTHON_STATIC_LIB )
 ENDIF()
 
