--- a/Cpp/CMakeLists.txt
+++ b/Cpp/CMakeLists.txt
@@ -2,6 +2,9 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 
 SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/Cmake)
 SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS ON)
+IF(NOT CMAKE_BUILD_TYPE )
+	SET(CMAKE_BUILD_TYPE "Debug")
+ENDIF()
 
 PROJECT(Cpp)
 
@@ -63,12 +66,12 @@ MESSAGE(STATUS "${ThirdPartyLibs}")
 
 IF(MSVC)
 	SET(CMAKE_CXX_FLAGS_DEBUG "/MTd")
-	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:libc.lib")
-	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:libcmt.lib")
-	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:msvcrt.lib")
-	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:libcd.lib")
-	SET(CMAKE_LINK_FLAGS "${CMAKE_LINK_FLAGS} /NODEFAULTLIB:libcmtd.lib")
-	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -DBOOST_PYTHON_STATIC_LIB )
+	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libc.lib")
+	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcmt.lib")
+	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:msvcrt.lib")
+	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcd.lib")
+	SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB:libcmtd.lib")
+	ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB -DBOOST_PYTHON_STATIC_LIB -DWIN64)
 ENDIF()
 
 ADD_SUBDIRECTORY(Platform)
